fix button icon on iOS

--- a/public/css/scss/_pages.scss
+++ b/public/css/scss/_pages.scss
@@ -88,6 +88,17 @@
     }
 }
 
+
+#tools {
+    background: $grey-900;
+    padding-top: 4em;
+    padding-bottom: 4em;
+
+    .medium, .huge {
+        text-shadow: 1px 1px 3px rgba(0,0,0,.7);
+    }
+}
+
 #home-gallery {
     .image-bg {
         margin:-2em auto;
