--- a/public/css/scss/_toolbox.scss
+++ b/public/css/scss/_toolbox.scss
@@ -139,6 +139,7 @@ html.sr .scrlld {
         border-radius: 0 1em 1em 0;
         box-shadow:none;
         border:none;
+        text-align:center;
 
         &:hover, &:focus {
             transform:none;
